tests/baselines/reference/continueNotInIterationStatement2.errors.txt
continueNotInIterationStatement2.ts(2,12): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
continueNotInIterationStatement2.ts(3,5): error TS1107: Jump target cannot cross function boundary.


==== continueNotInIterationStatement2.ts (2 errors) ====
    while (true) {
      function f() {
               ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
        continue;
        ~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
      }
    }